increase size to avoid overlap

--- a/client/src/pages/MapView/MapView.css
+++ b/client/src/pages/MapView/MapView.css
@@ -297,7 +297,7 @@ body,
   position: fixed;
   bottom: 45px;
   right: 20px;
-  width: 380px;
+  width: 400px;
   height: 50vh;
   background-color: var(--color-primary-200);
   padding: 20px;
